--- a/config.toml.example
+++ b/config.toml.example
@@ -32,5 +32,8 @@ kc-oauth-cl-secret = ""
 #Keycloak URL
 keycloakurl = ""
 
+#KeyCloak Token URL
+keycloaktokenurl = ""
+
 #Keycloak Realm
 keycloakrealm = ""
